Fixed currentchatlist & made 'fourm' button visible

--- a/css/mainstylesheet.css
+++ b/css/mainstylesheet.css
@@ -32,7 +32,14 @@ h1
   padding: 23px 15px;
   list-style-type: none;
   display: inline-block;
+  position: relative;
+  right: 40px;
   transition: background, 0.5s;
+}
+
+.navbarlist {
+	overflow: hidden;
+	width:100%;
 }
 
 .navbarlist li a
@@ -41,6 +48,7 @@ h1
   text-decoration: none;
   font-size: 20px;
   color: white;
+ 
 }
 
 .navbarlist li:hover
@@ -186,7 +194,7 @@ h1
   padding: 10px 10px;
   width: 77%;
   height: 70%;
-  margin: 10px 1px;
+  margin: 5px 1px;
   border: 1px solid #dcdcdc;
   border-radius: 5px;
 }
